# mydevenv

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yaml
app/: main.py
app/api/v1/: route.py
app/api/v1/endpoint/: admin.py  auth.py  bucket.py  tag.py  tool.py  user.py
app/core/: config.py  constant.py  constants.py  container.py  database.py  dependency.py  exception.py  security.py
app/core/dependencies/: auth.py  authentication.py
app/core/dependency/: authentication.py
app/model/: base_model.py  bucket.py  bucket_item.py  category.py  category_tag.py  comment.py  like.py  tag.py  tool.py  user.py
app/models/: base_model.py  category_tag.py  comment.py  like.py  tool.py  user.py
app/repository/: __init__.py  base_repository.py  bucket_repository.py  category_repository.py  comment_repository.py  like_repository.py  tag_repository.py  tool_repository.py  user_repository.py
app/service/: auth_service.py  base_service.py  bucket_service.py  category_service.py  like_service.py  tag_service.py  tool_service.py  user_service.py
app/service/integrated_service/: auth_service.py  tool_integrated_service.py
app/utils/: common.py
tests/: conftest.py
tests/data/user/: normal_users.json  super_users.json
tests/integration_tests/: test_admin_router.py  test_auth_router.py  test_bucket_router.py  test_tag_router.py
tests/unit_tests/: test_auth.py  test_auth_utils.py  test_base_router.py  test_simple_fixture.py
tests/utils/: bearer_creater.py  common.py  router_for_test.py
