[tool.poetry]
name = "mydevenv"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.1"
dependency-injector = "^4.41.0"
loguru = "^0.6.0"
sqlmodel = "^0.0.8"
asyncio = "^3.4.3"
anyio = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
requests-mock = "^1.10.0"
alembic = "^1.9.1"
black = "^22.12.0"
isort = "^5.11.4"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
aiosqlite = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
line_length = 120
profile = 'black'

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
