[tool.poetry]
name = "mydevenv"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.1"
dependency-injector = "^4.41.0"
loguru = "^0.6.0"
sqlmodel = "^0.0.8"
anyio = "^3.6.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
httpx = "^0.23.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
requests-mock = "^1.10.0"
alembic = "^1.9.1"
black = "^22.12.0"
isort = "^5.11.4"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
aiosqlite = "^0.18.0"
ruff = "^0.0.205"
pytest-xdist = "^3.1.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'


[tool.isort]
line_length = 120
profile = 'black'


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
target-version = "py310"
line-length = 120
ignore = [
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
]


[tool.ruff.per-file-ignores]
"conftest.py" = ["E402"]
"__init__.py" = ["E402"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
